--- a/PuzzleStarterKit/PuzzleStarterKit/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzleStarterKit/PuzzleStarterKit/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -119,8 +119,8 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
-ContentBrowserTab1.ActiveTypeFilters=World
-ContentBrowserTab1.EnabledTypeFilters=World
+ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
@@ -131,7 +131,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Character
+ContentBrowserTab1.SelectedPaths=/Game/FPPTemplate/Levels
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
@@ -1288,8 +1288,9 @@ SkyLight.Actor=True
 bHideUnrelatedNodes=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/FPPTemplate/Blueprints/BP_FPPT_PowerLineSpline.BP_FPPT_PowerLineSpline;
+RecentlyPlaced=/Game/FPPTemplate/Blueprints/BP_FPPT_PowerCube.BP_FPPT_PowerCube;
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/BP_FPPT_PowerSwitch.BP_FPPT_PowerSwitch;
+RecentlyPlaced=/Game/FPPTemplate/Blueprints/BP_FPPT_PowerLineSpline.BP_FPPT_PowerLineSpline;
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/LogicGates/BP_FPPT_Gate_XOR.BP_FPPT_Gate_XOR;
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/LogicGates/BP_FPPT_Gate_OR.BP_FPPT_Gate_OR;
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/LogicGates/BP_FPPT_DoOnceGate.BP_FPPT_DoOnceGate;
@@ -1297,7 +1298,6 @@ RecentlyPlaced=/Game/FPPTemplate/Blueprints/Interactables/BP_FPPT_Door.BP_FPPT_D
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/LogicGates/BP_FPPT_PowerInverter.BP_FPPT_PowerInverter;
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/LogicGates/BP_FPPT_Splitter.BP_FPPT_Splitter;
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/BP_FPPT_PowerBlock.BP_FPPT_PowerBlock;
-RecentlyPlaced=/Game/FPPTemplate/Blueprints/BP_FPPT_PowerCube.BP_FPPT_PowerCube;
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/BP_FPPT_CubeActivatorSphere.BP_FPPT_CubeActivatorSphere;
 RecentlyPlaced=/Game/FPPTemplate/Blueprints/BP_FPPT_CubeActivatorBox.BP_FPPT_CubeActivatorBox;
 
@@ -1306,6 +1306,6 @@ LastLogListing=LoadErrors
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
+Brush=
 
